--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
 
         <EditText
             android:id="@+id/edit_text_username"
+            android:inputType="text"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             />
